--- a/index.html
+++ b/index.html
@@ -1,2 +1,12 @@
-<html>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Iron Man</title>
+    <link rel="stylesheet" href="dist/css/main.css">
+</head>
+<body>
+    
+</body>
 </html>
