ajustes finais no hero

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </header>
     <section class="hero">
         <h3 class="title--small">
-            Stream iron man da exclusively Disney+
+            Stream iron man exclusively Disney+
         </h3>
         <div class="hero__container">
             <div class="hero__container__content">
@@ -60,7 +60,7 @@
                         <button class="button">Get it Now</button>
                     </li>
                     <li class="hero__container__content__combos__combo">
-                        <button class="button">Stream and Disney+</button>
+                        <button class="button">Stream on Disney+</button>
                     </li>
                 </ul>
             </div>
